<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EWB Yagi App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="instructions">Instructions</string>
    <string name="reader">Reader</string>
    <string name="home_footer">Powered By </string>
    <string name="gai"> Global App Initiative</string>
    <string name="ewb">Engineers Without Borders</string>
    <string name="about_gai">Global App Initiative’s mission is to teach students the skills necessary to develop mobile apps for nonprofits. We bring together students of all backgrounds and schools to assess the problems of volunteer organizations. There is a place for everyone at GAI regardless of previous experiences... </string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="title_activity_reader">ReaderActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>
